--- a/Lab_1_Assignment_v1.ipynb
+++ b/Lab_1_Assignment_v1.ipynb
@@ -2593,6 +2593,133 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "x = -5\n",
+        "if x < 0:\n",
+        "    print(\"It's negative\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IrBRQSAFGNj7",
+        "outputId": "cff277a1-48c9-44f2-a7ac-b4567c0cce8b"
+      },
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "It's negative\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if x < 0:\n",
+        "    print(\"It's negative\")\n",
+        "elif x == 0:\n",
+        "    print(\"Equal to zero\")\n",
+        "elif 0 < x < 5:\n",
+        "    print(\"Positive but smaller than 5\")\n",
+        "else:\n",
+        "    print(\"Positive and larger than or equal to 5\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HHEhwIDwGPV_",
+        "outputId": "209cb8e4-7fa3-4c9c-c3e6-7624bd7e8cf5"
+      },
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "It's negative\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 5; b = 7"
+      ],
+      "metadata": {
+        "id": "dN4ZfeIPGaOE"
+      },
+      "execution_count": 136,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = 8; d = 4"
+      ],
+      "metadata": {
+        "id": "EdVWC16BGaEv"
+      },
+      "execution_count": 137,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if a < b or c > d:\n",
+        "    print(\"Made it\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vIiwVBoQGZuX",
+        "outputId": "b210be20-0ef6-4af4-9abe-24c987f5c0a8"
+      },
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Made it\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "4 > 3 > 2 > 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V8hJ7lTeGnHZ",
+        "outputId": "b7d7be24-66fe-440e-b5db-fa97e83b57f8"
+      },
+      "execution_count": 139,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 139
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "QfTj3vqmR9-H"
@@ -2623,6 +2750,42 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "for i in range(4):\n",
+        "    for j in range(4):\n",
+        "        if j > i:\n",
+        "            break\n",
+        "        print((i, j))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mTp7tp35GydI",
+        "outputId": "8a421363-9506-42d7-d30c-c1e91b476ca7"
+      },
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(0, 0)\n",
+            "(1, 0)\n",
+            "(1, 1)\n",
+            "(2, 0)\n",
+            "(2, 1)\n",
+            "(2, 2)\n",
+            "(3, 0)\n",
+            "(3, 1)\n",
+            "(3, 2)\n",
+            "(3, 3)\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ZX2RH9jpR9-H"
@@ -2650,6 +2813,165 @@
       "outputs": [],
       "source": [
         "# Type code below"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 256\n",
+        "total = 0\n",
+        "while x > 0:\n",
+        "    if total > 500:\n",
+        "        break\n",
+        "    total += x\n",
+        "    x = x // 2"
+      ],
+      "metadata": {
+        "id": "jDGsWLNeHD1H"
+      },
+      "execution_count": 141,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "range(10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CnPMzW8WHKcS",
+        "outputId": "667a8c78-a17d-4ea0-e74b-245fa0cb6c16"
+      },
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "range(0, 10)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 142
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(range(10))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KVSyLKktHNMl",
+        "outputId": "c6654997-a1ab-4ecf-ea82-fbf57a1a903b"
+      },
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 143
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(range(0, 20, 2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T0b6_TiCHNIr",
+        "outputId": "21f8b62d-048d-4d3d-ffe0-71a48ac5c857"
+      },
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 144
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(range(5, 0, -1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PsAEC_gRHNEx",
+        "outputId": "aebf28f2-a36b-42ec-f37e-8e8088f324ca"
+      },
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[5, 4, 3, 2, 1]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 145
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total = 0\n",
+        "for i in range(100_000):\n",
+        "  # % is the modulo operator\n",
+        "  if i % 3 == 0 or i % 5 == 0:\n",
+        "    total += i"
+      ],
+      "metadata": {
+        "id": "kyXBA6z6HUU1"
+      },
+      "execution_count": 146,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(total)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pzclHbWAHjZ7",
+        "outputId": "a40c988e-be47-4914-e9d2-ca37b48ef8d4"
+      },
+      "execution_count": 147,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2333316668\n"
+          ]
+        }
       ]
     }
   ],
